tests/ui/spirv-attr/multiple.stderr
error: only one intrinsic type attribute is allowed on a struct
 --> $DIR/multiple.rs:8:18
  |
8 | #[spirv(sampler, sampler)]
  |                  ^^^^^^^
  |
note: previous intrinsic type attribute
 --> $DIR/multiple.rs:8:9
  |
8 | #[spirv(sampler, sampler)]
  |         ^^^^^^^

error: only one intrinsic type attribute is allowed on a struct
  --> $DIR/multiple.rs:11:17
   |
11 | #[spirv(matrix, matrix)]
   |                 ^^^^^^
   |
note: previous intrinsic type attribute
  --> $DIR/multiple.rs:11:9
   |
11 | #[spirv(matrix, matrix)]
   |         ^^^^^^

error: only one intrinsic type attribute is allowed on a struct
  --> $DIR/multiple.rs:17:18
   |
17 | #[spirv(sampler, generic_image_type)]
   |                  ^^^^^^^^^^^^^^^^^^
   |
note: previous intrinsic type attribute
  --> $DIR/multiple.rs:17:9
   |
17 | #[spirv(sampler, generic_image_type)]
   |         ^^^^^^^

error: only one intrinsic type attribute is allowed on a struct
  --> $DIR/multiple.rs:20:18
   |
20 | #[spirv(sampler, matrix)]
   |                  ^^^^^^
   |
note: previous intrinsic type attribute
  --> $DIR/multiple.rs:20:9
   |
20 | #[spirv(sampler, matrix)]
   |         ^^^^^^^

error: only one #[spirv(block)] attribute is allowed on a struct
  --> $DIR/multiple.rs:26:16
   |
26 | #[spirv(block, block)]
   |                ^^^^^
   |
note: previous #[spirv(block)] attribute
  --> $DIR/multiple.rs:26:9
   |
26 | #[spirv(block, block)]
   |         ^^^^^

warning: #[spirv(block)] is no longer needed and should be removed
  --> $DIR/multiple.rs:26:9
   |
26 | #[spirv(block, block)]
   |         ^^^^^

error: only one entry-point attribute is allowed on a function
  --> $DIR/multiple.rs:29:17
   |
29 | #[spirv(vertex, vertex)]
   |                 ^^^^^^
   |
note: previous entry-point attribute
  --> $DIR/multiple.rs:29:9
   |
29 | #[spirv(vertex, vertex)]
   |         ^^^^^^

error: only one entry-point attribute is allowed on a function
  --> $DIR/multiple.rs:32:17
   |
32 | #[spirv(vertex, fragment)]
   |                 ^^^^^^^^
   |
note: previous entry-point attribute
  --> $DIR/multiple.rs:32:9
   |
32 | #[spirv(vertex, fragment)]
   |         ^^^^^^

error: only one storage class attribute is allowed on a function param
  --> $DIR/multiple.rs:37:22
   |
37 |     #[spirv(uniform, uniform)] _same_storage_class: (),
   |                      ^^^^^^^
   |
note: previous storage class attribute
  --> $DIR/multiple.rs:37:13
   |
37 |     #[spirv(uniform, uniform)] _same_storage_class: (),
   |             ^^^^^^^

error: only one storage class attribute is allowed on a function param
  --> $DIR/multiple.rs:38:22
   |
38 |     #[spirv(uniform, push_constant)] _diff_storage_class: (),
   |                      ^^^^^^^^^^^^^
   |
note: previous storage class attribute
  --> $DIR/multiple.rs:38:13
   |
38 |     #[spirv(uniform, push_constant)] _diff_storage_class: (),
   |             ^^^^^^^

error: only one builtin attribute is allowed on a function param
  --> $DIR/multiple.rs:40:23
   |
40 |     #[spirv(position, position)] _same_builtin: (),
   |                       ^^^^^^^^
   |
note: previous builtin attribute
  --> $DIR/multiple.rs:40:13
   |
40 |     #[spirv(position, position)] _same_builtin: (),
   |             ^^^^^^^^

error: only one builtin attribute is allowed on a function param
  --> $DIR/multiple.rs:41:23
   |
41 |     #[spirv(position, vertex_index)] _diff_builtin: (),
   |                       ^^^^^^^^^^^^
   |
note: previous builtin attribute
  --> $DIR/multiple.rs:41:13
   |
41 |     #[spirv(position, vertex_index)] _diff_builtin: (),
   |             ^^^^^^^^

error: only one #[spirv(descriptor_set)] attribute is allowed on a function param
  --> $DIR/multiple.rs:43:33
   |
43 |     #[spirv(descriptor_set = 0, descriptor_set = 0)] _same_descriptor_set: (),
   |                                 ^^^^^^^^^^^^^^^^^^
   |
note: previous #[spirv(descriptor_set)] attribute
  --> $DIR/multiple.rs:43:13
   |
43 |     #[spirv(descriptor_set = 0, descriptor_set = 0)] _same_descriptor_set: (),
   |             ^^^^^^^^^^^^^^^^^^

error: only one #[spirv(descriptor_set)] attribute is allowed on a function param
  --> $DIR/multiple.rs:44:33
   |
44 |     #[spirv(descriptor_set = 0, descriptor_set = 1)] _diff_descriptor_set: (),
   |                                 ^^^^^^^^^^^^^^^^^^
   |
note: previous #[spirv(descriptor_set)] attribute
  --> $DIR/multiple.rs:44:13
   |
44 |     #[spirv(descriptor_set = 0, descriptor_set = 1)] _diff_descriptor_set: (),
   |             ^^^^^^^^^^^^^^^^^^

error: only one #[spirv(binding)] attribute is allowed on a function param
  --> $DIR/multiple.rs:46:26
   |
46 |     #[spirv(binding = 0, binding = 0)] _same_binding: (),
   |                          ^^^^^^^^^^^
   |
note: previous #[spirv(binding)] attribute
  --> $DIR/multiple.rs:46:13
   |
46 |     #[spirv(binding = 0, binding = 0)] _same_binding: (),
   |             ^^^^^^^^^^^

error: only one #[spirv(binding)] attribute is allowed on a function param
  --> $DIR/multiple.rs:47:26
   |
47 |     #[spirv(binding = 0, binding = 1)] _diff_binding: (),
   |                          ^^^^^^^^^^^
   |
note: previous #[spirv(binding)] attribute
  --> $DIR/multiple.rs:47:13
   |
47 |     #[spirv(binding = 0, binding = 1)] _diff_binding: (),
   |             ^^^^^^^^^^^

error: only one #[spirv(flat)] attribute is allowed on a function param
  --> $DIR/multiple.rs:49:19
   |
49 |     #[spirv(flat, flat)] _flat: (),
   |                   ^^^^
   |
note: previous #[spirv(flat)] attribute
  --> $DIR/multiple.rs:49:13
   |
49 |     #[spirv(flat, flat)] _flat: (),
   |             ^^^^

error: only one #[spirv(invariant)] attribute is allowed on a function param
  --> $DIR/multiple.rs:51:24
   |
51 |     #[spirv(invariant, invariant)] _invariant: (),
   |                        ^^^^^^^^^
   |
note: previous #[spirv(invariant)] attribute
  --> $DIR/multiple.rs:51:13
   |
51 |     #[spirv(invariant, invariant)] _invariant: (),
   |             ^^^^^^^^^

error: aborting due to 17 previous errors; 1 warning emitted

